v20.03.3/_sources/api/utils.rst.txt
Utils
================================================

.. automodule:: catalyst.utils
    :members:
    :show-inheritance:

.. automodule:: catalyst.utils.checkpoint
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.config
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.distributed
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.hash
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.initialization
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.misc
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.numpy
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.parser
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.scripts
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.seed
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.sys
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.torch
    :members:
    :undoc-members:
    :show-inheritance:


Tools
--------------------

.. automodule:: catalyst.utils.tools.frozen_class
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.tools.registry
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.tools.tensorboard
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.tools.time_manager
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.tools.typing
    :members:
    :undoc-members:
    :show-inheritance:



Metrics
--------------------

.. automodule:: catalyst.utils.metrics.accuracy
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.metrics.dice
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.metrics.f1_score
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.metrics.focal
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.metrics.iou
    :members:
    :undoc-members:
    :show-inheritance:


Meters
--------------------

The meters from torchnet.meters

.. automodule:: catalyst.utils.meters.meter
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.meters.apmeter
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.meters.aucmeter
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.meters.averagevaluemeter
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.meters.classerrormeter
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.meters.confusionmeter
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.meters.mapmeter
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.meters.movingaveragevaluemeter
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.meters.msemeter
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.utils.meters.ppv_tpr_f1_meter
    :members:
    :undoc-members:
    :show-inheritance:
