v20.04.2/_sources/api/utils.rst.txt
Utilities
================================================

.. toctree::
   :titlesonly:

.. contents::
   :local:

Utils
----------------------

.. automodule:: catalyst.utils
    :members:
    :show-inheritance:

Checkpoint
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.checkpoint
    :members:
    :undoc-members:
    :show-inheritance:

Config
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.config
    :members:
    :undoc-members:
    :show-inheritance:

Distributed
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.distributed
    :members:
    :undoc-members:
    :show-inheritance:

Hash
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.hash
    :members:
    :undoc-members:
    :show-inheritance:

Initialization
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.initialization
    :members:
    :undoc-members:
    :show-inheritance:

Misc
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.misc
    :members:
    :undoc-members:
    :show-inheritance:

Numpy
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.numpy
    :members:
    :undoc-members:
    :show-inheritance:

Parser
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.parser
    :members:
    :undoc-members:
    :show-inheritance:

Scripts
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.scripts
    :members:
    :undoc-members:
    :show-inheritance:

Seed
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.seed
    :members:
    :undoc-members:
    :show-inheritance:

Sys
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.sys
    :members:
    :undoc-members:
    :show-inheritance:

Torch
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.torch
    :members:
    :undoc-members:
    :show-inheritance:

Tools
------------------------

Frozen Class
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.tools.frozen_class
    :members:
    :undoc-members:
    :show-inheritance:

Registry
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.tools.registry
    :members:
    :undoc-members:
    :show-inheritance:

Time Manager
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.tools.time_manager
    :members:
    :undoc-members:
    :show-inheritance:

Typing
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.tools.typing
    :members:
    :undoc-members:
    :show-inheritance:

Metrics
------------------------

Accuracy
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.metrics.accuracy
    :members:
    :undoc-members:
    :show-inheritance:

Dice
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.metrics.dice
    :members:
    :undoc-members:
    :show-inheritance:

F1 score
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.metrics.f1_score
    :members:
    :undoc-members:
    :show-inheritance:

Focal
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.metrics.focal
    :members:
    :undoc-members:
    :show-inheritance:

IoU
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.metrics.iou
    :members:
    :undoc-members:
    :show-inheritance:

Meters
------------------------

The meters from torchnet.meters.

Every meter implements :py:class:`catalyst.utils.meters.meter.Meter` interface.

Meter
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.meters.meter
    :members:
    :undoc-members:
    :show-inheritance:

AP Meter
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.meters.apmeter
    :members:
    :undoc-members:
    :show-inheritance:

AUC Meter
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.meters.aucmeter
    :members:
    :undoc-members:
    :show-inheritance:

Average Value Meter
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.meters.averagevaluemeter
    :members:
    :undoc-members:
    :show-inheritance:

Class Error Meter
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.meters.classerrormeter
    :members:
    :undoc-members:
    :show-inheritance:

Confusion Meter
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.meters.confusionmeter
    :members:
    :undoc-members:
    :show-inheritance:

Map Meter
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.meters.mapmeter
    :members:
    :undoc-members:
    :show-inheritance:

Moving Average Value Meter
~~~~~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.meters.movingaveragevaluemeter
    :members:
    :undoc-members:
    :show-inheritance:

MSE Meter
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.meters.msemeter
    :members:
    :undoc-members:
    :show-inheritance:

Precision-Recall-F1 Meter
~~~~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.utils.meters.ppv_tpr_f1_meter
    :members:
    :undoc-members:
    :show-inheritance:
